--- a/backDevLearn/package.json
+++ b/backDevLearn/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "material-ui": "^0.20.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
