--- a/frontDevlearn/package.json
+++ b/frontDevlearn/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-timestamp-to-date": "^1.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
